--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@apollo/server": "^4.12.2",
     "@graphql-tools/schema": "^10.0.23",
     "@supabase/supabase-js": "^2.50.3",
+    "axios": "^1.10.0",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "graphql": "^16.11.0",
