--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "graphql": "^16.11.0",
+    "multer": "^2.0.1",
     "nodemon": "^3.1.10",
     "supabase": "^2.30.4",
     "swagger-ui-express": "^5.0.1"
