--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ SUPABASE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZi
 PORT=4000
 SWAGGER_JSON_PATH=./swagger.json
 PRONTO_API_KEY=b4-tQyxNcSR2SX6_oYE3ZGTTeZRwBgT1kpGiMgusfzqYcQnXzw
+INSEE_ACCESS_TOKEN=b6338dde-a1bd-3f78-9799-2a9942723d2b
