--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@graphql-tools/schema": "^10.0.23",
     "@supabase/supabase-js": "^2.50.3",
     "axios": "^1.10.0",
+    "bcryptjs": "^3.0.2",
     "csv-parse": "^4.16.3",
     "csv-parser": "^3.2.0",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "graphql": "^16.11.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "nodemon": "^3.1.10",
     "supabase": "^2.30.4",
