--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "nodemon": "^3.1.10",
+    "stripe": "^18.3.0",
     "supabase": "^2.30.4",
     "swagger-ui-express": "^5.0.1"
   }
